Changed ProcessRunner to support pipes without using cmd.exe (manual command parsing and multiple process piping). Refactoring. Added more test for ProcessRunner.